# cuda_programming

./: .gitignore  README.md
advanced_memory/: CMakeLists.txt  main.cpp
advanced_memory/src/: unified_memory.cu
array/: array  array.cu  memory  mul_array  mul_array.cu
array/add/: add  add_1d  add_1d.cu  add_2d.cu
array/array_sum/: array_sum  array_sum.cu  array_sum_timing.cu  ast
array/dot/: dot  dot.cu  longer_dot.cu
array/other/: array.cu  array_m  array_mul  exercise  exercise.cu  marray  memory.cu
array/other/array_sum/: array_sum  array_sum.cu  array_sum_timing.cu  ast
basic_elements/: CMakeLists.txt  exercise  main.cpp  test  thread_org  thread_org.cu
basic_elements/src/: add  add.cu  device  device.cu  exercise1.cu  helloword  helloworld.cu  new.cu  passParameters  pass_parameters.cu  test.cu  utility.cu  utility.h
const_memory_events/: cm.cu
constant-memory/: CMakeLists.txt  cm.cu
constant-memory-and-events/: CMakeLists.txt  main.cpp
constant-memory-and-events/src/: dot_product.cu  dot_product.h
cublas/: CMakeLists.txt
cublas/src/: cublasSaxpyTest.cu
device_property/: device  device.cu
dot-product/: main.cu
histogram/: main.cu
matrix-multiplication/: CMakeLists.txt  main.cpp  result.ncu-rep
matrix-multiplication/src/: naiveMM.cu  naiveMM.hpp  sgemm.cu  sgemm.hpp  sharedMM.cu  sharedMM.hpp
memory_hierarchy/: CMakeLists.txt
memory_hierarchy/src/: cudaArray.cu
merge_lists/: main  main.cu
parallel_programming/: CMakeLists.txt  main.cpp
parallel_programming/src/: add_vectors.cu  julia_set  julia_set.cu
parallel_reduction/: CMakeLists.txt  array_1.cu  array_2.cu  array_3.cu  array_syn.cu  common.cpp  common.h  main.cu  makefile  parallel.cu  test
radix_sort/: CMakeLists.txt  main  main.cu  sort  sort.cu  sort_simple  sort_simple.cu
ray_tracing/: main.cu
shared_memory/: CMakeLists.txt  main.cpp
shared_memory/.cache/clangd/index/: Utility.cpp.199E721058489E70.idx  main.cpp.926B33651B677E64.idx  transpose.cu.077CAD8C0B841D0C.idx  transpose.hpp.9EA04AF2EF982F0F.idx
shared_memory/src/: Utility.cpp  measureRuntime.cu  transpose.cu  transpose.hpp
sobel_filter/: CMakeLists.txt  main.cpp
sobel_filter/.cache/clangd/index/: constantSobelFilter.cu.707A8BC27BE98377.idx  constantSobelFilter.hpp.64D3E191EDED3EC3.idx  main.cpp.8E14F6A8C9E7565B.idx  sobelFilter.cu.0F9DE159A946470C.idx  sobelFilter.hpp.99E4170BA936FB07.idx  textureSobelFilter.cu.8594C7959732408E.idx  textureSobelFilter.hpp.074B7FD60987C990.idx
sobel_filter/src/: constantSobelFilter.cu  constantSobelFilter.hpp  sobelFilter.cu  sobelFilter.hpp  textureSobelFilter.cu  textureSobelFilter.hpp
streams/: CMakeLists.txt  CMakeLists.txt-bk  main-advanced.cu  main-benchmark.cu  main-graph.cu  main-merge.cu  main-sm-merge.cu  main-stream.cu  pinned.cu  pinned.cu-bk
streams/src/: cublasHandle.cu
surface_memory/: CMakeLists.txt  surface-basic.cu  surface-v1  surface-v1.cu  surface.cu  surface_vs_texture  texture-v1  texture-v1.cu  texture-v2.cu  texture.cu
transpose/: CMakeLists.txt  transpose.cu
unified-memory/: CMakeLists.txt  main.cu
warps/: my_metrics.txt  non_prefetch.qdrep  non_prefetch.sqlite  report1.qdrep  report2.qdrep  report2.sqlite  report3.qdrep  report4.qdrep  test.ncu-rep  test1.ncu-rep  warps_arch  warps_arch.profout.ncu-rep  warps_architecture.cu  warps_dir  warps_dir.cu  warps_optimization.cu
warps/.metadata/.plugins/com.nvidia.viper/: dialog_settings.xml
warps/.metadata/.plugins/org.eclipse.core.resources/: 0.snap
warps/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
warps/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
warps/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
warps/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.swarm-precision-3630-tower_524304/: node.properties
warps/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.swarm-precision-3630-tower_524304/FP.local.files_0/: node.properties
warps/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.swarm-precision-3630-tower_524304/H.local_16/: node.properties
warps/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml
